<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"

        />

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_soppingCart"
        />

    <item
        android:id="@+id/navigation_create_post"
        android:icon="@drawable/ic_baseline_post_add_24"
        android:title="@string/createPost"
        />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>