<resources>
    <string name="app_name">Qipao Shop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="Emaillabel">Email</string>
    <string name="PasswordLabel">Password</string>
    <string name="EmailRequiredlabel">Email*</string>
    <string name="SearchLabel">Search product</string>
    <string name="ProductDetail">Product Detail</string>
    <string name="PasswordRequiredLabel">Password*</string>
...
